perf: create classic dropdown

--- a/components/dropdown/src/styles/classic/color.scss
+++ b/components/dropdown/src/styles/classic/color.scss
@@ -16,7 +16,7 @@
   scss/selector-nest-combinators
 */
 
-:host([layout*='classic']) {
+:host([layout*='classic']:not([onDark])) {
   .label {
     color: var(--ds-auro-dropdown-label-text-color);
   }
@@ -33,91 +33,62 @@
       --ds-auro-dropdown-trigger-outline-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
     }
   }
+}
 
-  &[disabled] {
-    --ds-auro-dropdown-trigger-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
-    --ds-auro-dropdown-label-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
-  }
+/* Disabled state */
+:host([layout*='classic'][disabled]:not([onDark])) {
+  --ds-auro-dropdown-trigger-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
+  --ds-auro-dropdown-label-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
+  --ds-auro-dropdown-trigger-border-color: var(--ds-basic-color-border-subtle, #{v.$ds-basic-color-border-subtle});
+}
 
-  &[common],
-  &[bordered] {
-    --ds-auro-dropdown-trigger-border-color: var(--ds-basic-color-border-bold, #{v.$ds-basic-color-border-bold});
+/* Error state */
+:host([layout*='classic'][error]:not([onDark])) {
+  --ds-auro-dropdown-trigger-border-color: var(--ds-basic-color-status-error, #{v.$ds-basic-color-status-error});
 
-    .trigger {
-      &:active,
-      &:focus-within {
-        --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
-      }
+  .trigger {
+    outline: solid 1px var(--ds-auro-dropdown-trigger-border-color);
+
+    &:focus-within,
+    &:active {
+      --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
+      --ds-auro-dropdown-trigger-outline-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
     }
   }
+}
 
-  &[error] {
-    --ds-auro-dropdown-trigger-border-color: var(--ds-basic-color-status-error, #{v.$ds-basic-color-status-error});
-
-    .trigger {
-      outline: solid 1px var(--ds-auro-dropdown-trigger-border-color);
-
-      &:focus-within,
-      &:active {
-        --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
-        --ds-auro-dropdown-trigger-outline-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
-      }
-    }
+/* onDark */
+:host([layout*='classic'][onDark]) {
+  .label {
+    color: var(--ds-auro-dropdown-label-text-color);
   }
 
-  &[disabled][common],
-  &[disabled][bordered] {
-    --ds-auro-dropdown-trigger-border-color: var(--ds-basic-color-border-subtle, #{v.$ds-basic-color-border-subtle});
+  .trigger {
+    border-color: var(--ds-auro-dropdown-trigger-border-color);
+    background-color: var(--ds-auro-dropdown-trigger-container-color);
+    color: var(--ds-auro-dropdown-trigger-text-color);
+    outline-color: var(--ds-auro-dropdown-trigger-outline-color);
   }
+}
 
-  /* onDark styles */
+/* onDark + disabled */
+:host([layout*='classic'][onDark][disabled]) {
+  --ds-auro-dropdown-trigger-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
+  --ds-auro-dropdown-label-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
+  --ds-auro-dropdown-trigger-container-color: var(--ds-advanced-color-shared-background-inverse-disabled, #{v.$ds-advanced-color-shared-background-inverse-disabled});
+}
 
-  &[onDark] {
-    --ds-auro-dropdown-label-text-color: var(--ds-basic-color-texticon-inverse-muted, #{v.$ds-basic-color-texticon-inverse-muted});
-    --ds-auro-dropdown-trigger-container-color: var(--ds-advanced-color-shared-background-inverse, #{v.$ds-advanced-color-shared-background-inverse});
-    --ds-auro-dropdown-trigger-text-color: var(--ds-basic-color-texticon-inverse, #{v.$ds-basic-color-texticon-inverse});
+/* onDark + error */
+:host([layout*='classic'][onDark][error]) {
+  --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-error-inverse, #{v.$ds-advanced-color-state-error-inverse});
+
+  .trigger {
+    outline: solid 1px var(--ds-auro-dropdown-trigger-border-color);
 
     &:focus-within,
     &:active {
       --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
       --ds-auro-dropdown-trigger-outline-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
     }
-  }
-
-  &[onDark][disabled] {
-    --ds-auro-dropdown-trigger-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
-    --ds-auro-dropdown-label-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
-  }
-
-  &[onDark][common],
-  &[onDark][bordered] {
-    --ds-auro-dropdown-trigger-border-color: var(--ds-basic-color-border-inverse, #{v.$ds-basic-color-border-inverse});
-
-    .trigger {
-      &:focus-within,
-      &:active {
-        --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
-        --ds-auro-dropdown-trigger-outline-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
-      }
-    }
-  }
-
-  &[onDark][error] {
-    --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-error-inverse, #{v.$ds-advanced-color-state-error-inverse});
-
-    .trigger {
-      outline: solid 1px var(--ds-auro-dropdown-trigger-border-color);
-
-      &:focus-within,
-      &:active {
-        --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
-        --ds-auro-dropdown-trigger-outline-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
-      }
-    }
-  }
-
-  &[onDark][disabled][common],
-  &[onDark][disabled][bordered] {
-    --ds-auro-dropdown-trigger-container-color: var(--ds-advanced-color-shared-background-inverse-disabled, #{v.$ds-advanced-color-shared-background-inverse-disabled});
   }
 }
