--- a/components/dropdown/src/styles/classic/style.scss
+++ b/components/dropdown/src/styles/classic/style.scss
@@ -52,8 +52,10 @@
   .triggerContentWrapper {
     overflow: hidden;
     flex: 1;
+    justify-content: start;
     text-overflow: ellipsis;
     white-space: nowrap;
+    padding-left: var(--ds-size-150, vac.$ds-size-150);
   }
 
 
@@ -63,7 +65,7 @@
     overflow: hidden;
     height: 100%;
     align-items: center;
-    margin-left: var(--ds-size-100, vac.$ds-size-100);
+    padding-right: var(--ds-size-150, vac.$ds-size-150);
 
     [auro-icon] {
       height: var(--ds-size-300, vac.$ds-size-300);
@@ -79,11 +81,6 @@
   /* stylelint-enable selector-id-pattern */
 }
 
-:host([layout*='classic'][fluid]) {
-  display: block;
-}
-
-
 :host([layout*='classic'][matchwidth]) {
   #bibSizer {
     width: 100%;
@@ -92,30 +89,4 @@
 
 :host([layout*='classic'][disabled]) {
   pointer-events: none;
-}
-
-:host([layout*='classic'][inset]) {
-  .trigger {
-    padding: var(--ds-size-150, vac.$ds-size-150) var(--ds-size-200, vac.$ds-size-200);
-  }
-}
-
-:host([layout*='classic'][common]),
-:host([layout*='classic'][inset][bordered]) {
-  .trigger {
-    padding: var(--ds-size-200, vac.$ds-size-200) var(--ds-size-150, vac.$ds-size-150);
-  }
-}
-
-:host([layout*='classic'][inset][bordered][labeled]) {
-  .trigger {
-    padding: var(--ds-size-100, vac.$ds-size-100) var(--ds-size-150, vac.$ds-size-150);
-  }
-}
-
-:host([layout*='classic'][common]),
-:host([layout*='classic'][rounded]) {
-  .trigger {
-    border-radius: var(--ds-border-radius, vac.$ds-border-radius);
-  }
 }
