--- a/components/layoutElement/src/styles/shapeSize.scss
+++ b/components/layoutElement/src/styles/shapeSize.scss
@@ -16,7 +16,6 @@ $xs: 24px;
 
 // SHAPES ---------------------------------------------------
 
-
 @mixin simple($size) {
   $simpleBorderSize: 0px;
 
@@ -28,8 +27,6 @@ $xs: 24px;
     box-shadow: none; // only here to support classic shape temporarily
   }
 }
-
-// shape thin for 1px border
 
 @mixin thin($size) {
   $thinBorderSize: 1px;
@@ -71,6 +68,12 @@ $xs: 24px;
   border-style: solid;
   border-width: 1px;
   border-radius: var(--ds-border-radius, #{vac.$ds-border-radius});
+
+  &:focus-within,
+  &:active {
+    outline-width: 1px;
+    outline-style: solid;
+  }
 
   @include variants(60px);
 }
