feat!: datepicker snowflake layout
This adds most of the new snowflake-based layout and is _almost_ ready. Includes some work for range input as well :)

--- a/components/datepicker/src/styles/default/color.scss
+++ b/components/datepicker/src/styles/default/color.scss
@@ -1,6 +1,6 @@
 :host {
   [auro-dropdown]::part(wrapper) {
-    border: 1px solid aqua;
-    outline: 2px solid crimson;
+    //border: 1px solid aqua;
+    //outline: 2px solid crimson;
   }
 }
