--- a/components/datepicker/apiExamples/emphasized/basic.html
+++ b/components/datepicker/apiExamples/emphasized/basic.html
@@ -1,4 +1,10 @@
-<auro-datepicker layout="emphasized" shape="pill" size="lg" ondark="">
+<auro-datepicker style="width: 306px" layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+  <span slot="bib.fullscreen.headline">Datepicker Headline</span>
+  <span slot="fromLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
+</auro-datepicker>
+
+<auro-datepicker disabled="" range style="width: 306px" layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="bib.fullscreen.dateLabel">Choose a date</span>
