feat: add displayValue slot for custom HTML content in combobox and add slot api docs

--- a/components/combobox/apiExamples/emphasized/basic.html
+++ b/components/combobox/apiExamples/emphasized/basic.html
@@ -12,6 +12,12 @@
   <span slot="helpText">
     Help text - Lorem ipsum solar lorem ipsum solar
   </span>
+  <span slot="displayValue">
+    <div>
+      <div class="mainText">Apples</div>
+      <div class="subText">Fruit</div>
+    </div>
+  </span>
 </auro-combobox>
 
 <auro-combobox layout="emphasized" shape="pill-left" size="xl" placeholder="Placeholder content" required ondark style="width: 249px;">
