--- a/components/input/src/styles/style.scss
+++ b/components/input/src/styles/style.scss
@@ -4,6 +4,8 @@
 
 // COMMON FOR ALL ---------------------------------------------------
 
+/* stylelint-disable selector-max-class, max-nesting-depth, selector-class-pattern, scss/selector-nest-combinators */
+
 :host {
   display: block;
 }
@@ -24,6 +26,15 @@ input {
   background: unset;
   outline: none;
   text-overflow: ellipsis;
+}
+
+.displayValue {
+  display: none;
+
+  &.hasContent:is(.withValue):not(.hasFocus) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .accents {
