--- a/components/dropdown/src/styles/classic/style.scss
+++ b/components/dropdown/src/styles/classic/style.scss
@@ -39,6 +39,8 @@
   .trigger {
     display: flex;
     flex-direction: row;
+
+    box-shadow: inset 0 0 0 1px var(--ds-auro-dropdown-trigger-outline-color);
   }
 
   @media (hover: hover) {
