--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -15,7 +15,10 @@
   selector-class-pattern,
   scss/selector-nest-combinators,
   selector-max-class,
-  selector-max-pseudo-class
+  selector-max-pseudo-class,
+  selector-max-combinators,
+  selector-max-compound-selectors,
+  selector-no-qualifying-type
 */
 
 [auro-dropdown] {
@@ -76,7 +79,7 @@
 
 :host([layout*='classic']) {
   .triggerContent {
-    padding: 0 8px 0 8px; // TODO: update to use design token
+    padding: 0 8px; // TODO: update to use design token
   }
 
   .mainContent {
@@ -85,26 +88,25 @@
 
   label {
     cursor: text;
-
     font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0;
     font-weight: 450;
+    letter-spacing: 0;
+    line-height: 24px;
 
     &.withValue {
       font-size: 12px;
-      line-height: 16px;
-      letter-spacing: 0;
       font-weight: 450;
+      letter-spacing: 0;
+      line-height: 16px;
     }
   }
 
   .value {
     height: auto;
     font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0;
     font-weight: 450;
+    letter-spacing: 0;
+    line-height: 24px;
   }
 }
 
